# WarzoneMapEditor

./: .gitignore  .gitmodules  3c-DA-castle-b3wz  3dobject.h  CMakeLists.txt  Makefile  README.md  TODO  World3d.cpp  World3d.h  blbrbgen.pie  fragment.frag  imgui.ini  main  main.cpp  mypng.c  mypng.h  myshader.c  myshader.h  pie.c  pie.h  texturetest.fmap  vertex.vs
.github/workflows/: cmake.yml
WMT/: Makefile
WMT/lib/: wmt.cpp  wmt.hpp  zip.cpp
cmake/: git.cmake
data/: 2c-blendtest.wz  2c-texturetest.wz  TerrainShaderFragment.frag  TerrainShaderVertex.vs  TileSelectionShader.vs  blendtest.fmap  fragment.frag
data/shaders/: Object3d.frag  Object3d.vs  TileSelectionShader.frag  plaincolor.frag  plaincolor.vs  vertex.vs
lib/: log.cpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Models.cpp  Models.h  Object3d.cpp  Object3d.h  Pie.cpp  Pie.h  Shader.cpp  Shader.h  Structure.cpp  Structure.h  Texture.cpp  Texture.h  World3d.cpp  World3d.h  args.cpp  args.h  build.h.in  config.cpp  config.h  main.cpp  myshader.h  other.cpp  other.h  pie.cpp  pie.h  stats.cpp  stats.h  terrain.cpp  terrain.h  tileset.cpp  tileset.h  wmeglobal.cfg
